--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 https://docs.google.com/document/d/1r27DIY3f2i8Z0i6iNwEyprNqXXAsItM5zNlWPnRGcJ8/edit?usp=sharing
+
+Acorn proposal:
+https://docs.google.com/document/d/1OVbuRrLE4Ccv4y2faCYiOoB3TqpvROxo/edit?usp=sharing&ouid=100593650534578765216&rtpof=true&sd=true
