--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@ https://docs.google.com/document/d/1r27DIY3f2i8Z0i6iNwEyprNqXXAsItM5zNlWPnRGcJ8/
 
 Acorn proposal:
 https://docs.google.com/document/d/1OVbuRrLE4Ccv4y2faCYiOoB3TqpvROxo/edit?usp=sharing&ouid=100593650534578765216&rtpof=true&sd=true
+
+Acorn final approval: 
+https://docs.google.com/document/d/17sJXKmCuskbl0lTzJNp5lZ-rJrsCxwRK/edit?usp=sharing&ouid=100593650534578765216&rtpof=true&sd=true
